[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "salon-beauty-bot"
version = "1.0.0"
dependencies = [
    "aiogram==3.0.0b8",
    "python-dotenv>=1.0.0",
    "aiohttp==3.9.0",
]
requires-python = ">=3.10"

[tool.render]
build-command = "pip install -r requirements.txt"
start-command = "python main.py"